istio/deployments/istio/destination-rule/destination-rule.yml
#create destination rule for servicea
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: servicea
spec:
  host: servicea.demo.svc.cluster.local
  outlierDetection:
    consecutiveErrors: 1
    interval: 1s
    baseEjectionTime: 30s
    maxEjectionPercent: 100
  subsets:
    - name: v1
      labels:
        version: v1
